2012-08-16  Roland McGrath  <roland@hack.frob.com>

	* stdlib/gmp-impl.h (udiv_qrnnd_preinv): Use __attribute__ ((unused))
	on _QL, which is set by umul_ppmm but never used.
	* stdio-common/_itoa.c (_itoa): Use __attribute__ ((unused)) on DUMMY
	variables, which are set by GMP macros but never used.
	* stdio-common/_itowa.c (_itowa): Likewise.
	* stdlib/divmod_1.c (mpn_divmod_1): Likewise.
	* stdlib/mod_1.c (mpn_mod_1): Likewise.

2012-08-16  Carlos O'Donell  <carlos_odonell@mentor.com>

	* sysdeps/sh/ldsodefs.h (ARCH_PLTENTER_MEMBERS) <sh_gnu_pltenter>:
	struct La_sh_regs is not constant.
	* sysdeps/sparc/ldsodefs.h (ARCH_PLTENTER_MEMBERS)
	<sparc32_gnu_pltenter, sparc64_gnu_pltenter>: struct La_sparc32_regs
	and struct La_sparc64_regs are not constant.

2012-08-16  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/kernel-features.h
	(__ASSUME_POSIX_TIMERS): Remove.
	* sysdeps/unix/sysv/linux/clock_getcpuclockid.c
	[!__ASSUME_POSIX_TIMERS]: Remove conditional code.
	* sysdeps/unix/sysv/linux/clock_getres.c [__ASSUME_POSIX_TIMERS]:
	Make code unconditional.
	[!__ASSUME_POSIX_TIMERS]: Remove conditional code.
	* sysdeps/unix/sysv/linux/clock_gettime.c [__ASSUME_POSIX_TIMERS]:
	Make code unconditional.
	[!__ASSUME_POSIX_TIMERS]: Remove conditional code.
	* sysdeps/unix/sysv/linux/clock_nanosleep.c
	[__ASSUME_POSIX_TIMERS]: Make code unconditional.
	[!__ASSUME_POSIX_TIMERS]: Remove conditional code.
	* sysdeps/unix/sysv/linux/clock_settime.c [__ASSUME_POSIX_TIMERS]:
	Make code unconditional.
	[!__ASSUME_POSIX_TIMERS]: Remove conditional code.
	[__ASSUME_POSIX_CPU_TIMERS <= 0 && __NR_clock_settime]
	(__libc_missing_posix_timers): Remove.

2012-08-15  Roland McGrath  <roland@hack.frob.com>

	* elf/dl-load.c (_dl_map_object_from_fd) [SHARED]: Conditionalize
	check of GL(dl_error_catch_tsd) on [_LIBC_REENTRANT].

	* bits/libc-lock.h (__rtld_lock_initialize): New macro.

	* elf/dl-sym.c: Include <stdlib.h>.
